tests/integration/targets/playbooks/provision_playbook/enterprise-example.com/platform/kong/sandbox-kong/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tavros-sandbox-kong
  namespace: kong
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/protocols: https
    kubernetes.io/ingress.class: sandbox
    cert-manager.io/cluster-issuer: tavros
    konghq.com/https-redirect-status-code: "302"
spec:
  tls:
    - hosts:
        - "admin-api.sandbox-kong.tavros.enterprise-example.com"
        - "admin.sandbox-kong.tavros.enterprise-example.com"
        - "dev-portal-api.sandbox.tavros.enterprise-example.com"
        - "dev-portal.sandbox.tavros.enterprise-example.com"
        - "apps.sandbox.tavros.enterprise-example.com"
      secretName: sandbox-kong-ingress-certs
  rules:
    - host: "admin-api.sandbox-kong.tavros.enterprise-example.com"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kong-tavros-sandbox-kong-kong-admin
                port:
                  number: 8001
    - host: "admin.sandbox-kong.tavros.enterprise-example.com"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kong-tavros-sandbox-kong-kong-manager
                port:
                  number: 8002
    - host: "dev-portal.sandbox.tavros.enterprise-example.com"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kong-tavros-sandbox-kong-kong-portal
                port:
                  number: 8003
    - host: "dev-portal-api.sandbox.tavros.enterprise-example.com"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kong-tavros-sandbox-kong-kong-portalapi
                port:
                  number: 8004
    - host: "apps.sandbox.tavros.enterprise-example.com"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kong-tavros-sandbox-kong-kong-proxy
                port:
                  number: 80
